changed to Java21